components: postList, postPreview, correct styles

--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -2,6 +2,8 @@
 
 // Заголовок
 @import "common/title";
+// Описание
+@import 'common/description.scss';
 // Контролы
 @import "common/controls";
 // Линки
