--- a/assets/css/common/title.scss
+++ b/assets/css/common/title.scss
@@ -1,6 +1,5 @@
 .title {
-  margin-bottom: 20px;
-  color: #333333;
-  font-size: 30px;
-  font-weight: 700;
+  // margin-bottom: 20px;
+  color: #000000;
+  font-size: 20px;
 }
